# Liquid3D

./: .gitignore  LICENSE  README.md  build.sh
.github/workflows/: cmake.yml  cmake2.yml  cmake3.yml  codeql.yml  makefile.yml  makefile2.yml  makefile3.yml
blender/: boat.blend  boat.blend1  tornado.blend  tornado.blend1  vdb_blender.blend  vdb_blender.blend1  water copie.blend  water copie.blend1  water.blend  water.blend1  water2.blend
blender/visu/: 0035-0230.mov  0069-0210.mov  0105-0230.mov  2.mov  foam.mov  foam_v2.mov  pancake.mov  test1.mov
openvdbCppBridge/: CMakeLists.txt  Dockerfile  Doxyfile  OpenVdbBridge  Readme.md  buildDocker.sh  liquidPointCloud_002.txt  randomCloud.txt  runDocker.sh
openvdbCppBridge/docs/: Readme_8md.html  annotated.html  annotated_dup.js  classParticleList-members.html  classParticleList.html  classParticleList.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.dot  main_8cpp__incl.map  main_8cpp__incl.md5  md_Readme.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  particleList_8hpp.html  particleList_8hpp.js  particleList_8hpp__dep__incl.dot  particleList_8hpp__dep__incl.map  particleList_8hpp__dep__incl.md5  particleList_8hpp__incl.dot  particleList_8hpp__incl.map  particleList_8hpp__incl.md5  particleList_8hpp_source.html  pointGrid_8hpp.html  pointGrid_8hpp.js  (+28 more)
openvdbCppBridge/docs/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js
openvdbCppBridge/src/: exportToObj.h  main.cpp  particleList.h  particleList.hpp  pointGrid.hpp  rasterize.hpp  utils.hpp
openvdbPyBridge/: Dockerfile  Readme.md  buildDocker.sh  main.py  particles_to_volume.py  points_float.txt  pythonCppInterface.py  runDocker.sh  runDockerUnix.sh  test_level_set_sphere.py  test_levelset_from_polygon.py  test_levelset_sphere.py
particlesToVDB/: Readme.md  main.py  parse_file.py  particles_to_levelset.py
pythonFallback/: main.py  particles_to_levelset.py
ressources/IISPH_IGR202_Jonas/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  oldMain (useless for now).cpp
simulation/: CMakeLists.txt  Format_post_SPH.txt  IISPH  IISPH_solver.hpp  README.txt  main.cpp  tpSph
simulation/Report_latex/: sample-authordraft.aux  (+2 more)
simulation/v2 - IISPH 3D/: CMakeLists.txt  IISPH_solver.hpp  Makefile  Readme.md  Vector.hpp  liquidPointCloud_001.txt  liquidPointCloud_011.txt  liquidPointCloud_3.txt  main.cpp  particleInitialization.hpp
simulation/v2 - IISPH 3D/savedFiles/: liquidPointCloud_2.txt  liquidPointCloud_balanced.txt
(+147 files in other folders)
